<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    tools:context=".TodayWeatherFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/weather_panel"

        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_city_name"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/weather_panel"
            android:layout_alignEnd="@+id/weather_panel"
            android:text="@string/weather_in_london_gb"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/txt_temperature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginLeft="8dp"
                android:text="14 C"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_in_london_gb"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_in_london_gb"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:padding="16dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/wind" />

                <TextView
                    android:id="@+id/txt_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:text="@string/wind_description" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/pressure" />

                <TextView
                    android:id="@+id/txt_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:text="1013.75 hpa" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/txt_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:text="100%" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/sunrise" />

                <TextView
                    android:id="@+id/txt_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:text="11:00" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="@string/sunset" />

                <TextView
                    android:id="@+id/txt_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:text="18:00" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell"
                    android:text="Geo CoOrd" />

                <TextView
                    android:id="@+id/txt_geo_coord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:text="@string/geo_coord" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

</RelativeLayout>